// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficeGroupsContent should match a snapshot 1`] = `
<Fragment>
  <Formik
    initialValues={
      Object {
        "selectedGroup": Array [],
      }
    }
    onSubmit={[Function]}
  >
    <Form>
      <Component>
        <Component
          columns={
            Array [
              Object {
                "Header": "Group Name",
                "accessor": "name",
              },
              Object {
                "Header": "Office List",
                "accessor": "officeIds",
              },
              Object {
                "Header": "Last Updated",
                "accessor": "description",
              },
              Object {
                "Header": "Edit",
              },
            ]
          }
          data={
            Array [
              Object {
                "created": "2019-08-14T12:30:02.0000000Z",
                "id": "string",
                "modified": "2019-08-14T12:30:02.0000000Z",
                "name": "string",
                "officeIds": "string",
                "organisationId": "string",
                "status": "string",
                "tag": "string",
              },
            ]
          }
          expandable={true}
          scrollable={true}
        />
      </Component>
    </Form>
  </Formik>
  <Component
    onChange={[Function]}
    pageNumber={0}
    pageSize={0}
    totalCount={0}
  />
</Fragment>
`;

exports[`OfficesGroupsTab should match a snapshot 1`] = `
<ErrorBoundary>
  <div
    className=""
  >
    <p>
      Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs.
    </p>
    <div
      className=""
    >
      <span>
        Existing office groups
      </span>
      <Component
        onClick={[Function]}
      >
        Create office group
      </Component>
    </div>
  </div>
  <Component
    columns={
      Array [
        Object {
          "Header": "Group Name",
          "accessor": "name",
        },
        Object {
          "Cell": [Function],
          "Header": "Office List",
          "accessor": "officeIds",
        },
        Object {
          "Cell": [Function],
          "Header": "Last Updated",
          "accessor": "description",
        },
        Object {
          "Cell": [Function],
          "Header": "Edit",
        },
      ]
    }
    data={
      Object {
        "_embedded": Array [
          Object {
            "created": "2019-08-14T12:30:02.0000000Z",
            "id": "string",
            "modified": "2019-08-14T12:30:02.0000000Z",
            "name": "string",
            "officeIds": "string",
            "organisationId": "string",
            "status": "string",
            "tag": "string",
          },
        ],
        "_links": Object {
          "additionalProp1": Object {
            "href": "string",
          },
          "additionalProp2": Object {
            "href": "string",
          },
          "additionalProp3": Object {
            "href": "string",
          },
        },
        "pageCount": 0,
        "pageNumber": 0,
        "pageSize": 0,
        "totalCount": 0,
        "totalPageCount": 0,
      }
    }
    onPageChange={[Function]}
  />
</ErrorBoundary>
`;
